fix and clean